# ribbit-rs

ribbit-core/: .env  Cargo.toml  config.json  dev_conf.toml  doc.md  justfile
ribbit-core/sql/dev_initial/: 01-create-schema.sql  02-dev-seed.sql
ribbit-core/src/: config.rs  error.rs  main.rs
ribbit-core/src/_dev_utils/: dev_db.rs  mod.rs
ribbit-core/src/ctx/: error.rs  mod.rs
ribbit-core/src/model/: error.rs  mod.rs  task.rs
ribbit-core/src/model/embedder/: error.rs  mod.rs
ribbit-core/src/model/store/: db_store.rs  error.rs  mod.rs  vec_store.rs
