[package]
name = "ribbit-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.16.3"
axum = "0.6.20"
dotenvy = "0.15.7"
once_cell = "1.18.0"
qdrant-client = "1.6.0"
serde = "1.0.192"
serde_json = "1.0.108"
serde_with = "3.4.0"
sqlx = { version = "0.7.2", features = ["uuid", "time", "postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["fast-rng", "v4"] }
